--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
+    "framer-motion": "^11.11.17",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
@@ -50,6 +51,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
+    "react-intersection-observer": "^9.13.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
